<resources>
    <string name="app_name">Saaei Office</string>
    <string name="skip">تخطي</string>
    <string name="phone_number">رقم الجوال</string>
    <string name="register">تسجيل</string>
    <string name="login_text">تسجيل الدخول</string>
    <string name="enable">تفعيل</string>
    <string name="verification_code">كود التفعيل</string>
    <string name="confirm_new_password">تأكيد كلمة المرور الجديدة</string>
    <string name="save">حفط</string>
    <string name="forget_password">نسيت كلمة المرور ؟</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">تالي</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="office_logo">شعار المكتب</string>
    <string name="office_name">اسم المكتب العقاري</string>
    <string name="commercial_register">السجل التجاري</string>
    <string name="write_name_hire">اكتب الاسم هنا</string>
    <string name="e_mail">البريد الالكتروني</string>
    <string name="write_e_mail_here">اكتب البريد الالكتروني هنا</string>
    <string name="vendor">تاجر</string>
    <string name="upgrade_package">    ترقية الباقة    </string>
    <string name="password">كلمة المرور</string>
    <string name="current_password">كلمة المرور الحالية</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="change_the_city">تعديل المدينة</string>
    <string name="thank_you_registration_is_completed_successfully">شكرا لكم , تمت عملية التسجيل بنجاح</string>
    <string name="your_account_is_under_review_and_you_will_receive_a_notification">حسابكم قيد المراجعة وسيتم ابلاغكم باشعار</string>
    <string name="saaei_application_management">إدارة تطبيق ساعي</string>
    <string name="remember_me">ذكرني</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language">اللغة</string>
    <string name="notification">الإشعارات</string>
    <string name="technical_support">الدعم الفني</string>
    <string name="about_app">عن التطبيق</string>
    <string name="edit_profile">تعديل الملف الشخصي</string>
    <string name="favorite_list">قائمة المفضلة</string>
    <string name="fqa">الأسئلة الشائعة</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="golden_pakage">الباقة الذهبية</string>
    <string name="upgrade_pakage">ترقية الباقة</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="complete_register">اكمال التسجيل</string>
    <string name="we_will_send_verification_code_to_phon_number">سيتم إرسال رسالة تفعيل الان للرقم </string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="old_password">كلمة المرور القديمة</string>
    <string name="current_phone_number">رقم الجوال الحالي</string>
    <string name="new_phone_number">رقم الجوال الجديد</string>
    <string name="read_condition_and_terms">قراءة الشروط والأحكام</string>
    <string name="change_phone_number">تغيير رقم الجوال</string>
    <string name="change_password_by_phone_number">اعادة تعيين كلمة المرور بواسطة رقم الجوال</string>
    <string name="do_you_need_installment">هل تحتاج تقسيط ؟</string>
    <string name="allow_communication_via_phone">السماح بالتواصل عبر الجوال ؟</string>
    <string name="rent">إيجار</string>
    <string name="sale">بيع</string>
    <string name="real_estate_area">مساحة العقار</string>
    <string name="new_1">تالي</string>
    <string name="first_step">الخطوة الأولى</string>
    <string name="max">اقصى</string>
    <string name="min">ادنى</string>
    <string name="preview_the_property_on_the_map_find_out_the_location_nearby_services_compare_prices">معاينة العقار على الخريطة يمكنك من معرفة، الموقع، الخدمات المجاورة، مقارنة الأسعار</string>
    <string name="estate_properties">مواصفات العقار</string>
    <string name="features">مميزات</string>
    <string name="send_message">ارسال رسالة</string>
    <string name="apply">تطبيق</string>
    <string name="choose_the_language">اختر اللغة</string>
    <string name="my_estate">عقاراتي</string>
    <string name="the_order_is_sent">تم ارسال الطلب</string>
    <string name="cancel">الغاء</string>
    <string name="edit_order">تعديل الطلب</string>
    <string name="choose_the_city_before">اختر المدينة أولا</string>
    <string name="choose_the_main_category_before">اختر التصنيف الرئيسي اولا</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="number_of_reviews">عدد التقييمات</string>
    <string name="add_estate">إضافة عقار</string>
    <string name="city">المدينة</string>
    <string name="neighborhood">الحي</string>
    <string name="estate_location_on_map">موقع العقار على الخريطة</string>
    <string name="comparison">مقارنة</string>
    <string name="services">الخدمات</string>
    <string name="location">الموقع</string>
    <string name="contact_requests">طلبات تواصل</string>
    <string name="requested_estate">عقارات مطلوبة</string>
    <string name="added_estate">عقارات مضافة</string>
    <string name="type_of_estate">نوع العقار</string>
    <string name="type_of_contract">نوع العقد</string>
    <string name="estate_images">صور العقار</string>
    <string name="street_view">التجول الإفتراضي</string>
    <string name="write_the_area_in_square_metres">اكتب المساحة بالمتر مربع</string>
    <string name="locate_the_estate_on_map">تحديد العقار على الخريطة</string>
    <string name="is_there_a_possibility_of_installment">هل يوجد إمكانية التقسيط ؟</string>
    <string name="send">إرسال</string>
    <string name="other_specifications">مواصفات أخرى</string>
    <string name="estate_price">سعر العقار</string>
    <string name="best_features">افضل المميزات</string>
    <string name="are_there_any_contraindications_that_prevent_the_use_of_the_estate">هل يوجد موانع تمنع التصرف والانتفاع بالعقار ؟</string>
    <string name="are_there_some_undocumented_rights">هل يوجد بعض الحقوق الغير موثقه ؟</string>
    <string name="contraindications_detail">تفاصيل المانع</string>
    <string name="rights_details">تفاصيل الحقوق</string>
    <string name="is_there_any_information_on_the_estate">هل يوجد معلومات تؤثر على العقار ؟</string>
    <string name="information_details">تفاصيل المعلومات</string>
    <string name="are_there_guarantees">هل هناك ضمانات ؟</string>
    <string name="guarantees_details">تفاصيل الضمانات</string>
    <string name="compliant_with_the_saudi_building_code">متوافق مع كود البناء السعودي ؟</string>
    <string name="advertiser_character">صفة المعلن</string>
    <string name="commissioner">مفوض</string>
    <string name="owner">المالك</string>
    <string name="commissioner_number">رقم التفويض</string>
    <string name="set_this_site">تعيين هذا الموقع</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="second_step">الخطوة الثانية</string>
    <string name="third_step">الخطوة الثالثة</string>
    <string name="review">مراجعة</string>
    <string name="main_features">المواصفات الرئيسية</string>
    <string name="sub_features">المميزات</string>
    <string name="region">المنطقة</string>
    <string name="in_auction">على السوم</string>
    <string name="total_views">عدد المشاهدات الكلي</string>
    <string name="less_budget">أقل ميزانية</string>
    <string name="highest_budget">أعلى ميزانية</string>
    <string name="sub_specifications">مواصفات فرعية</string>
    <string name="main_specifications">مواصفات رئيسية</string>
    <string name="to">إلى</string>
    <string name="from">من</string>
    <string name="daily">يومي</string>
    <string name="monthly">شهري</string>
    <string name="yearly">سنوي</string>
    <string name="opining">مفتوح</string>
    <string name="choose_rent_period">اختار مدة الايجار</string>
    <string name="floors"> أدوار </string>
    <string name="complete_profile">إكمال الملف الشخصي</string>
    <string name="others_estate">عقارات الأخرين</string>

    <string name="freshchat_file_provider_authority" translatable="true">
    com.saaei12092021.office.provider </string>


</resources>