<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.AccountUnderReviewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="30sp"
        android:adjustViewBounds="true"
        android:src="@drawable/splash_logo"
        android:contentDescription="@string/app_name" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_profile_image"
        android:layout_width="128sp"
        android:layout_height="128sp"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:src="@drawable/profile_image"
        app:civ_border_color="@color/dark_blue"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:civ_border_width="2dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_margin="10sp"
        android:textAlignment="center"
        android:text="مكتب عقاري"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textAlignment="center"
        android:textSize="12sp"
        android:text="@string/thank_you_registration_is_completed_successfully"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:layout_margin="10sp"
        android:textAlignment="center"
        android:text="@string/your_account_is_under_review_and_you_will_receive_a_notification"
        android:background="@drawable/green_three_corner"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:layout_margin="10sp"
        android:text="@string/saaei_application_management"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:paddingStart="50sp"
        android:paddingEnd="50sp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@drawable/rounded_button_green"
        android:text="@string/remember_me"
        android:textStyle="bold" />

    </LinearLayout>

</ScrollView>