<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    tools:context=".ui.fragments.myEstatesFragment.MainMyEstateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginTop="4sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/added_estate_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:textAlignment="center"
            android:textSize="10sp"
            android:background="@drawable/rounded_button"
            android:layout_weight="1"
            android:text="@string/added_estate"/>

        <TextView
            android:id="@+id/requested_estate_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:textAlignment="center"
            android:textSize="10sp"
            android:layout_weight="1"
            android:text="@string/requested_estate"/>

        <TextView
            android:id="@+id/deliver_request_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="10sp"
            android:text="@string/contact_requests"/>

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/child_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    />

</LinearLayout>