<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_top_corner_white2"
    android:orientation="vertical"
    tools:context=".ui.fragments.addNewAdsFragments.AddNewEstateLocationOnMapFragment">

    <RelativeLayout
        android:id="@+id/header_Relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr">

        <RelativeLayout
            android:id="@+id/back_rl"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true">

            <ImageView
                android:id="@+id/back_iv"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:layout_centerInParent="true"
                android:background="@drawable/back_image"
                android:contentDescription="@string/app_name" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/white"
            android:text="@string/locate_the_estate_on_map" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <fragment
            android:id="@+id/map_for_estate_location"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60sp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_current_location_btn"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_alignParentBottom="true"
            android:background="@color/green_for_app"
            android:text="@string/set_this_site"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>

</LinearLayout>
