<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.ChangPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header_Relative"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/green_for_app"
            android:layoutDirection="ltr"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/back_linear"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                >

                <ImageView
                    android:id="@+id/back_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back_image"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/skip_tx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/skip"
                    android:textColor="@color/green_for_app"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="تحديث كلمة المرور"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100sp"
            android:layout_marginBottom="60sp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/splash_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="13sp"
            android:paddingEnd="13sp"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:text="@string/old_password"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/old_password_et"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:background="@drawable/rounded_edit_text"
            android:inputType="textPassword"
            android:paddingStart="15sp"
            android:paddingEnd="15sp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="13sp"
            android:paddingEnd="13sp"
            android:text="@string/new_password"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/new_password_et"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:background="@drawable/rounded_edit_text"
            android:inputType="textPassword"
            android:paddingStart="15sp"
            android:paddingEnd="15sp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="13sp"
            android:paddingEnd="13sp"
            android:text="@string/confirm_new_password"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/confirm_new_password_et"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:background="@drawable/rounded_edit_text"
            android:inputType="textPassword"
            android:paddingStart="15sp"
            android:paddingEnd="15sp"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300sp"
                android:layout_alignParentBottom="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:cropToPadding="true"
                android:scaleType="fitCenter"
                android:src="@drawable/splash_background_1" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_button"
                android:paddingStart="100sp"
                android:paddingEnd="100sp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>